@@ -1,3 +1,9 @@
+2019-03-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR tree-optimization/89703
+	* gcc.c-torture/compile/pr89703-1.c: New test.
+	* gcc.c-torture/compile/pr89703-2.c: New test.
+
 2019-03-14  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/89523
